# junction2025

./: README.md  package-lock.json
ai-service/: .gitignore  DATABASE.md  README.md  database.py  docker-compose.yaml  main.py  models.py  pyproject.toml  schemas.py  test_main.py
ai-service/alembic/: env.py
ai-service/db_models/: user.py
ai-service/routes/: __init__.py  random_forest.py  users.py
ai-service/scripts/: generate_users.py
backend/: .env  .env.example  DATABASE.md  Harvia_API.postman_collection.json  Makefile  README.md  README_DEVICES.md  START_FOR_MOBILE.ps1  alembic.ini  database.py  docker-compose.yaml  go.mod  main.go  main.py  models.py  pyproject.toml  schemas.py  test_graphql.py  test_main.py
backend/API_reference/: api_reference.md  devices.md  endpoints.md  request.md
backend/alembic/versions/: 7d68c92359ee_add_users_table.py
backend/db_models/: __init__.py  sauna.py  sauna_session.py
backend/examples/: README.md  harvia_api_example.py
backend/handlers/: device.go  health.go  user.go
backend/models/: device.go  user.go
backend/routes/: __init__.py  decision_tree.py  harvia.py  knn.py  routes.go  sauna_backend.py  saunas.py  sessions.py  svm.py
backend/scripts/: __init__.py  generate_saunas.py  generate_sessions.py
backend/services/: harvia_api.py
saunsei/: .env.example  API_CONNECTION.md  README.md  app.json  package-lock.json  package.json
saunsei/Docs/: Harvia Cloud Devices .docx
saunsei/app/: _layout.tsx  wrapped.tsx
saunsei/components/: AppHeader.tsx  BottomNavigation.tsx  GradientButton.tsx  MapHeader.tsx  (+5 more)
(+26 files in other folders)
